# mate-applet-streamer

./: BUGS  ChangeLog  INSTALL  Makefile.am  README  TODO  TRANSLATIONS  autogen.sh  configure.ac  mate-applet-streamer.spec.in
images/: Makefile.am  icons-16.xcf  icons-20.xcf  icons-22.xcf  icons-24.xcf  icons-32.xcf  icons.xcf
po/: LINGUAS  bg_BG.po  en_GB.po  en_US.po  fr.po  ru_RU.po  softupd.pot  streamer.pot  tr.po
src/: Makefile.am  StreamerAppletFactory.server  StreamerAppletFactory.server.in  applet.h  backend-yum.c  custom.c  gstreamer.c  gstreamer.h  icecast.c  main.c  menu.c  options.c  org.mate.applets.StreamerApplet.mate-panel-applet.in  org.mate.panel.applet.StreamerApplet.gschema.xml.in  org.mate.panel.applet.StreamerApplet.service.in  rbrowser.c  settings.c  sqlite.c  streamer-applet-menu.xml  streamer.h  streamer.sqlite  util.c
